--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,20 +3,22 @@
     package="com.myApp.yourRestaurant">
 
     <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.DayNight"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
 
         android:usesCleartextTraffic="true">
 
 
         <activity
-            android:name=".view.CommentListView"
+            android:name=".view.RegisterUserView"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
