--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.myApp.yourRestaurant">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,18 +15,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-
         android:usesCleartextTraffic="true">
-
-        <activity android:name=".view.CommentListView"
-            android:exported="false"/>
-        <activity android:name=".view.RegisterUserView"
-            android:exported="false"/>
+        <activity
+            android:name=".view.DetailCommentView"
+            android:exported="false" />
+        <activity
+            android:name=".view.CommentListView"
+            android:exported="false" />
+        <activity
+            android:name=".view.RegisterUserView"
+            android:exported="false" />
         <activity
             android:name=".view.UserLoginView"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
